force-app/main/default/objects/Industry_Code_Values__mdt/Industry_Code_Values__mdt.object-meta.xml
<CustomObject>
    <label>Industry Code Values</label>
    <pluralLabel>IndustryCodes</pluralLabel>
</CustomObject>