force-app/main/default/objects/Industry_Code_Values__mdt/fields/Focus_Segment__c.field-meta.xml
<CustomField>
    <fullName>Focus_Segment__c</fullName>
    <label>Focus Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>