force-app/main/default/objects/Industry_Code_Values__mdt/fields/Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_Code__c</fullName>
    <description>Internal Code for Industries in Ace</description>
    <inlineHelpText>Internal Code for Industries in Ace</inlineHelpText>
    <label>Internal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>